# ansible-role-systemd_networkd

./: .gitreview  CONTRIBUTING.rst  README.md  README.rst  ansible-role-requirements.yaml  requirements.yml  run_tests.sh  setup.cfg  tox.ini
defaults/: main.yml
doc/source/: conf.py
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: molecule.yml
releasenotes/source/: conf.py  index.rst
tasks/: main.yml
templates/: interface-cleanup.sh.j2  systemd-link.j2  systemd-netdev.j2  systemd-network-link.j2  systemd-network-routes.j2  systemd-network-rules.j2  systemd-network.j2
tests/: prepare.yml  side_effect.yml  test.yml  verify.yml  verify_side_effect.yml
tests/group_vars/: all_containers.yml
tests/host_vars/: localhost.yml
vars/: archlinux.yml  debian-12.yml  debian-13.yml  debian.yml  main.yml  redhat-10.yml  redhat-7.yml  redhat-8.yml  redhat-9.yml  suse-42.yml  ubuntu-16.04.yml  ubuntu-24.yml  ubuntu.yml
zuul.d/: project.yaml
